--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     }
     header {
       background-color: #333;
-      color: white;
+      color: blue;
       padding: 1rem;
       text-align: center;
     }
     nav {
       display: flex;
       justify-content: center;
-      background-color: #444;
+      background-color: #555;
     }
     nav a {
-      color: white;
+      color: red;
       padding: 1rem;
       text-decoration: none;
     }
@@ -35,7 +35,7 @@
     }
     footer {
       background-color: #333;
-      color: white;
+      color: black;
       text-align: center;
       padding: 1rem;
       position: fixed;
